--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this city", @city %> |
-  <%= link_to "Back to cities", cities_path %>
+  <%= link_to "Show this city", @city, class: 'btn btn-success' %>
+  <%= link_to "Back to cities", cities_path, class: 'btn btn-secondary' %>
 </div>
