--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -3,8 +3,11 @@
 <%= render @city %>
 
 <div>
-  <%= link_to "Edit this city", edit_city_path(@city) %> |
-  <%= link_to "Back to cities", cities_path %>
-
-  <%= button_to "Destroy this city", @city, method: :delete %>
+  <% if can? :edit, @city %>
+    <%= link_to "Edit this city", edit_city_path(@city), class: 'btn btn-success' %> 
+  <% end%>
+  <%= link_to "Back to cities", cities_path, class: 'btn btn-secondary' %>
+  <% if can? :destroy, @city %>
+    <%= button_to "Destroy this city", @city, method: :delete, class: 'btn btn-danger' %>
+  <% end %>
 </div>
