--- a/app/views/terminals/edit.html.erb
+++ b/app/views/terminals/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this terminal", @terminal %> |
-  <%= link_to "Back to terminals", terminals_path %>
+  <%= link_to "Show this terminal", @terminal, class: 'btn btn-success' %>
+  <%= link_to "Back to terminals", terminals_path, class: 'btn btn-secondary' %>
 </div>
