--- a/app/views/terminals/show.html.erb
+++ b/app/views/terminals/show.html.erb
@@ -3,8 +3,11 @@
 <%= render @terminal %>
 
 <div>
-  <%= link_to "Edit this terminal", edit_terminal_path(@terminal) %> |
-  <%= link_to "Back to terminals", terminals_path %>
-
-  <%= button_to "Destroy this terminal", @terminal, method: :delete %>
+  <% if can? :edit, @terminal %>
+    <%= link_to "Edit this terminal", edit_terminal_path(@terminal), class: 'btn btn-success' %>
+  <% end %>
+  <%= link_to "Back to terminals", terminals_path, class: 'btn btn-secondary' %>
+  <% if can? :destroy, @terminal %>
+    <%= button_to "Destroy this terminal", @terminal, method: :delete, class: 'btn btn-danger' %>
+  <% end %>
 </div>
